--- a/poppc-for-bayesian-models.html
+++ b/poppc-for-bayesian-models.html
@@ -11775,6 +11775,14 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="By-Jay-Zern-Ng-and-Yuki-Nishimura">By Jay Zern Ng and Yuki Nishimura<a class="anchor-link" href="#By-Jay-Zern-Ng-and-Yuki-Nishimura">&#182;</a></h3>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Application-of-Population-Predictive-Checks-(POP-PC)-to-Bayesian-Models">Application of Population Predictive Checks (POP-PC) to Bayesian Models<a class="anchor-link" href="#Application-of-Population-Predictive-Checks-(POP-PC)-to-Bayesian-Models">&#182;</a></h1>
 </div>
 </div>
